--- a/dicee.html
+++ b/dicee.html
@@ -10,7 +10,8 @@
   <body>
 
     <div class="container">
-      <h1>Refresh Me</h1>
+      <h1>Click PlayME</h1>
+      <h1><a href="#" class="playGame">PLAY ME</a></h1>
 
       <div class="dice">
         <p>Player 1</p>
